altered yahoo